package sase.pattern.workload;

public enum WorkloadManagerTypes {
	SINGLE,
	MULTI_STATIC,
	MULTI_DYNAMIC,
}
